2010-05-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-class.cpp: Re-add a check for not allowing downloaders to be used for
	detached surfaces (our own test #381 / test-dead-downloaders.html).

2010-05-25  Andreia Gaita  <avidigal@novell.com>

	* plugin.cpp: remove reentrant hack for chrome, fixed upstream
	(see http://code.google.com/p/chromium/issues/detail?id=32797)

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.mdp: Updated.

2010-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.mdp: Updated.

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp|h:
	* plugin-glue.cpp:
	* plugin-class.cpp:
	* npstream-request.cpp|h:
	* plugin-downloader.cpp|h: Updated to the new HttpRequest API.

	* Makefile.am:
	* curl/*: Moved curl bridge source code into libmoon.

	* browser-bridge.h: Update to the new HttpRequest API.

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-entry.cpp: Spew all js exceptions thrown when in debug mode.

2010-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: Fix FIXME by reffing self during a timeout.

2010-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin-proxy.cpp: Fix compiler warning.

2010-05-12  Chris Toshok  <toshok@ximian.com>

	* plugin-proxy.cpp (load): we don't need the libmoon.so.0 part
	since we don't install the System.Windows.dll.config file into the
	plugin directory anymore.

2010-05-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp: Line-break the ReportException javascript code so that it can be
	understood by humans. Add code to detect if we don't have a parent (which may
	happen if we've been detached from the DOM) and use the window object instead
	in that case. Fixes #352.

2010-05-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Make plugin.cpp depend on plugin-spinner.h.

2010-05-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.cpp|h: